Revision history for DBIx::Class::Sims (ordered by revision number).

0.330000 May 25 2019 12:30:00 PDT
   - Fix a nasty bug when the FK is also a UK and there is more than one
     relationship emanating from the child table.

0.320000 May 11 2019 12:30:00 PDT
   - Handle the case where a FK is also a UK
       - Note: This currently only works for a single-column UK containing the
         FK where there is 1-and-only-1 inverse relationship from the parent
         Anything more complex may be undecidable in all cases.
   - Add method traversal for backreferences
   - strict_mode renamed to ignore_unknown_tables (defaults to false)
   - Add a allow_relationship_column_names option (defaults to false)
   - strict_mode is now a compilation of other options
       - ignore_unknown_tables = false
       - allow_relationship_column_names = false

0.310001 Apr 14 2019 12:30:00 PDT
   - Documentation fixes.

0.310000 Dec 26 2018 14:30:00 PDT
   - THIS RELEASE CONTAINS A POTENTIALLY BREAKING BEHAVIOR CHANGE.
   - Add a strict_mode (defaults to true)
      - Throws an error when a tablename doesn't exist

0.303000 Nov 25 2018 14:30:00 PDT
   - Find the best match including all parentage. (Re-enabled feature)
   - Don't call update() in fix_deferred_fks if no columns are dirty.
   - Ignore inflated columns when looking for a sims spec.

0.302001 Nov 25 2018 13:30:00 PDT
   - Allow a DBIC object to be set to a column, not just a relationship.

0.302000 Nov 11 2018 19:30:00 PDT
   All fixes below graciously provided by ZipRecruiter.
   - Warn when a not-null autoincrement primary key has a value set.
     - Set the allow_pk_set_value parameter to disable the warning.
   - Defer handling of nullable FKs to enable self-referential rows.

0.301000 Nov 26 2017 19:30:00 PDT
   - Remove a section of code that takes parentage into account when looking for
     existing rows. Please see the attached comment for explanation.

0.300900 Nov 12 2017 14:00:00 PDT