@@ -5,7 +5,7 @@ use 5.010_001;
 
 use strictures 2;
 
-our $VERSION = '0.320000';
+our $VERSION = '0.330000';
 
 {
   # Do **NOT** import a clone() function into the DBIx::Class::Schema namespace
